# CVSCppUtils

./: README.md
.github/workflows/: cmake-multi-platform.yml
UtilsTest/: CMakeLists.txt  SmartEnum.h
UtilsTest/Tests/: PolymorphicObjectTestDefs.h  SmartEnumTestDefs.h  TestMain.cpp
UtilsTest/include/: Polymorphic.h
UtilsTest/tests/: PolymorphicObjectTestDefs.cpp  PolymorphicObjectTestDefs.h  PolymorphicObjectsTest.cpp  SmartEnumTest.cpp  SmartEnumTestDefs.cpp  SmartEnumTestDefs.h  SmartEnumTestDefsFwd.h
